# old-hermes

./: .gitignore  .replit  Cargo.toml  JUSTFILE  README.md  docker-compose.yaml  example.env  flake.nix  nostr.json
.cargo/: config.toml
.github/workflows/: test.yml
migrations/: 20231224194609_create_tables.sql  20231224194609_nip05tables.sql
sql/: seed.sql
src/: config.rs  error.rs  helpers.rs  lib.rs  main.rs  routes.rs  state.rs  utils.rs
src/model/: app_user.rs  app_user_relays.rs  base.rs  invoice.rs  invoice_state.rs  mod.rs  nip05.rs  nip05relays.rs  relay.rs  user.rs  userrelays.rs  zap.rs
src/model/store/: mod.rs
src/models/: lnurl.rs  mod.rs  nostr.rs
src/router/: handlers.rs  mod.rs  state.rs
src/router/handlers/: lnurlp.rs  mod.rs  nostr.rs
src/router/handlers/lnurlp/: callback.rs  mod.rs  verify.rs  well_known.rs
src/router/handlers/nostr/: mod.rs  register.rs  well_known.rs
src/types/: lnurl.rs  mod.rs  nostr.rs
