[package]
name = "fedimint_lnurl"
version = "0.1.0"
edition = "2021"

[lib]
name = "fedimint_lnurl"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
fedimint = "0.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fedimint-client = { git = "https://github.com/fedimint/fedimint", branch = "master" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", branch = "master" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", branch = "master" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", branch = "master" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", branch = "master" }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", branch = "master" }
url = "2.5.0"
nostr = "0.25.0"
