[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
fedimint = "0.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fedimint-client = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", branch = "releases/v0.2" }
url = "2.5.0"
nostr = "0.26.0"
nostr-sdk = "0.26.0"
lazy_static = "1.4.0"
async-utility = "0.1.1"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }
sqlb = "0.4.0"
futures = "0.3.30"
xmpp = "0.5.0"
itertools = "0.12.0"
